# nft-minter

./: Cargo.toml  build.sh
.cargo/: config
artifacts/: checksums.txt  nft_minter.wasm
src/: api.rs  attributes.rs  contract.rs  error.rs  lib.rs  tests.rs
