[package]
name = "nft-minter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library"]
mt = ["library", "sylvia/mt"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer-arm64:0.15.0
"""
[dependencies]
cosmwasm-schema = "1.5.1"
cosmwasm-std = "1.5.1"
cw-storage-plus = "1.2.0"
schemars = "0.8.16"
serde = "1.0.195"
sylvia = "0.9.3"
cw-utils = "1.0"
thiserror = "1.0"


[dev-dependencies]
cw-multi-test = "0.20.0"
sylvia = { version = "0.9.3", features = ["mt"] }